--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "jest": {
     "verbose": true,
-    "bail": true
+    "bail": true,
+    "modulePathIgnorePatterns": ["deleteMe"]
   }
 }
