--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-generator-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,8 @@
   "jest": {
     "verbose": true,
     "bail": true,
-    "modulePathIgnorePatterns": ["deleteMe"]
+    "modulePathIgnorePatterns": [
+      "deleteMe"
+    ]
   }
 }
